first commit google play